--- a/components/styles/TopBar.module.scss
+++ b/components/styles/TopBar.module.scss
@@ -1,30 +1,46 @@
 // src/styles/TopBar.module.scss
+@import '../../src/styles/colors.scss';
 .topBar {
+  font-family: $font-family-base;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   background-color: #f8f9fa;
-  padding: 10px 50px;
+  padding: 1rem 7.125rem; // 10px 50px
 
   .contactInfo {
+    display: flex;
+    flex-direction: row;
+    gap: 0.2rem;
+
     span {
-      margin-right: 20px;
-      font-size: 14px;
-      color: #555;
+      margin-right: 1.25rem; // 20px
+      font-size: 0.9rem; // 14px
+      color: $dark-blue;
       display: flex;
       align-items: center;
 
       svg {
-        margin-right: 8px;
+        width: 1rem !important;
+        margin-right: 0.5rem; // 8px
         color: #007bff; // Set the color to blue
       }
     }
   }
 
   .socialMedia {
+    display: flex;
+    flex-direction: row;
+    gap: 1.5rem;
+    margin-top: -1.5rem;
+   // align-items: center;
+    div:first-child{
+      width:6.5%;
+    }
     a {
-      margin-left: 15px;
+      margin-left: 0.9375rem; // 15px
       color: #007bff; // Set the color to blue
-      font-size: 16px;
+      //font-size: 0.2rem; // 16px
 
       svg {
         transition: color 0.3s ease;
