--- a/src/app/Materials/MaterialComponent.module.scss
+++ b/src/app/Materials/MaterialComponent.module.scss
@@ -19,7 +19,7 @@
         color: white;
         padding: 2rem;
         background-size: cover;
-        background-position: center;
+        background-position:top;
         background-repeat: no-repeat;
         background-color: $primary-blue;
         border-radius: 8px;
