--- a/src/app/Materials/MediaCardComponent.module.scss
+++ b/src/app/Materials/MediaCardComponent.module.scss
@@ -1,32 +1,114 @@
+@import '../../styles/colors.scss';
+
 .mediaCardContainer {
-    position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+}
+
+.mediaCard {
+  width: 100%;
+  max-width: 1900px; /* Adjust the max-width for videos and PDFs */
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.pdfContainer {
+  padding: 20px;
+
+  .pdfHeader {
     display: flex;
-    justify-content: center;
     align-items: center;
-    margin: 2rem 0;
-    padding: 1rem;
+    justify-content: space-between;
+    margin-bottom: 10px;
+
+    .pdfIcon {
+      font-size: 2rem;
+      margin-right: 10px;
+      color: #e74c3c;
+    }
+
+
+
+    .pdfActions {
+      display: flex;
+      justify-content: center;
+    }
+
+    .pdfLink {
+      background-color: #007bff;
+      color: white;
+      padding: 8px 16px;
+      border-radius: 4px;
+      text-decoration: none;
+      transition: background-color 0.3s ease;
+
+      &:hover {
+        background-color: #0056b3;
+      }
+    }
   }
-  
-  .mediaCard {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+  .pdfPreviewImage {
     width: 100%;
-    max-width: 600px;
-  
-    &:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-    }
-  
-    .pdfViewer,
-    .videoViewer {
-      width: 100%;
-      height: 300px;
-      border: none;
-      border-radius: 0 0 8px 8px;
-    }
+    height: auto;
+    margin-bottom: 10px;
+    border-radius: 4px;
   }
-  
+  h2 {
+    font-size: $font-size-big;
+    color: $primary-blue;
+    margin-bottom: 1rem;
+    font-weight: $font-weight-bold;
+    position: relative;
+    padding-bottom: 0.5rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+
+    &::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 50px;
+        height: 3px;
+        background-color: $hover-blue;
+        border-radius: 3px;
+    }
+}
+}
+
+.videoContainer {
+  padding: 20px;
+
+  .videoTitle {
+    font-size: $font-size-big;
+    color: $primary-blue;
+    margin-bottom: 1rem;
+    font-weight: $font-weight-bold;
+    position: relative;
+    padding-bottom: 0.5rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+
+    &::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 50px;
+        height: 3px;
+        background-color: $hover-blue;
+        border-radius: 3px;
+    }
+}
+
+  .videoViewer {
+    width: 100%;
+    height: 400px; /* Adjust the height as necessary */
+    border: none;
+  }
+}
