--- a/components/styles/Navbar.module copy.scss
+++ b/components/styles/Navbar.module copy.scss
@@ -10,56 +10,23 @@
   border-top: 1px solid $border-blue;
   border-bottom: 1px solid $border-blue; /* Light blue border */
   box-shadow: 0 -4px 6px -2px rgba(0, 51, 102, 0.1);
-  @media (max-width: 768px) {
-    padding: 1rem; 
-  }
   .left {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width:100%;
     margin-top: -3.5rem;
-    @media (max-width: 768px) {
-      flex-direction: column;
-      margin-top: 0.1rem;
-      align-items: flex-start;
-    }
-  }
-   .hamneighb{
-    display:flex;
-    flex-direction: row;
-   }
-  .hamburger {
-    display: none;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 30px;
-    height: 20px;
-    cursor: pointer;
-    @media (max-width: 768px) {
-      display: block;
-    }
-  }
-
-  .hamburgerLine {
-    width: 100%;
-    height: 3px;
-    background-color: #003366;
-    transition: all 0.3s ease;
   }
 
   .logo {
     display: flex;
     align-items: center;
-    //margin-right: 50px;
+    margin-right: 50px;
 
     img {
       border-radius: 50%;
       height: 5rem;
       margin-right: 10px;
-      @media (max-width: 768px) {
-        height: 3rem;
-      }
     }
 
     .logoText {
@@ -71,18 +38,12 @@
         margin: 0;
         font-size: $font-size-biggest;
         font-weight: 600;
-        color: #0a0b0c ; 
-        @media (max-width: 768px) {
-          font-size: 14px;
-        }
+        color: #0a0b0c ; /* Darker blue for the name */
       }
 
       span {
         font-size: $font-size-normal;
-        color: $primary-blue; 
-        @media (max-width: 768px) {
-          font-size: 12px;
-        }
+        color: $primary-blue; /* Medium blue for the subtitle */
       }
     }
 
@@ -146,9 +107,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    @media (max-width: 768px) {
-      display: none;
-    }
     .trustItems {
       display: flex;
       align-items: center;
@@ -195,19 +153,14 @@
   div{
     width:10rem;
    // height:8rem;
-   @media (max-width: 768px) {
-    width:8rem;
-  }
+    img{
+      //object-fit: cover;
+    }
+
     &:nth-of-type(2){
       width:19rem;
       img{
         margin-top: 2rem;
-        @media (max-width: 768px) {
-          margin-top:0rem;
-        }
-      }
-      @media (max-width: 768px) {
-        width:14rem;
       }
      // height:12rem;
     }
@@ -223,56 +176,4 @@
   z-index: 1000;
   background-color: #fff; /* Make sure the background is solid when sticky */
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add a shadow for a raised effect */
-}
-
-@media (max-width: 768px) {
-  .trustItems {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between; /* Adjust alignment to fit images */
-
-    div {
-      //width: auto;
-     // position: absolute;
-      animation: moveLeft 6s infinite ease-in-out;
-      
-      &:nth-of-type(2) {
-        position: absolute;
-        animation-delay: 3s; /* Delay the second image by 3 seconds */
-      }
-      
-      img {
-        width: 100%;
-        height: auto;
-        object-fit: cover;
-      }
-    }
-  }
-
-  @keyframes moveLeft {
-    0% {
-      transform: translateX(100%); /* Start off-screen to the right */
-      opacity: 0;
-    }
-    10% {
-      opacity: 1;
-    }
-    40% {
-      transform: translateX(0); /* Fully visible at the center */
-      opacity: 1;
-    }
-    60% {
-      transform: translateX(0); /* Hold position for a moment */
-      opacity: 1;
-    }
-    90% {
-      opacity: 0;
-      transform: translateX(-100%); /* Move off-screen to the left */
-    }
-    100% {
-      transform: translateX(-100%);
-      opacity: 0;
-    }
-  }
 }
