--- a/components/styles/StickyNavExtras.module.scss
+++ b/components/styles/StickyNavExtras.module.scss
@@ -11,11 +11,16 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     display: none;
     transition: opacity 0.3s ease-in-out;
+  
   }
   
   .visible {
     display: block;
     opacity: 1;
+    @media (max-width: 1200px) {
+      display: none;
+    //  padding: 1.5rem; 
+    }
   }
   
   .navLinks {
