--- a/components/styles/TopBar.module.scss
+++ b/components/styles/TopBar.module.scss
@@ -2,16 +2,28 @@
 @import '../../src/styles/colors.scss';
 .topBar {
   font-family: $font-family-base;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  //display: flex;
+  //justify-content: space-between;
+  //align-items: center;
   background-color: #f8f9fa;
-  padding: 1rem 7.125rem; // 10px 50px
+  padding: 1rem 7.125rem; 
+  @media (max-width: 1200px) {
+    padding: 1.5rem; 
+  }
 
+  .hamburger {
+    display: none;
+    font-size: 1.5rem;
+    color: $dark-blue;
+    cursor: pointer;
+  }
   .contactInfo {
     display: flex;
     flex-direction: row;
     gap: 0.2rem;
+    @media (max-width: 860px) {
+      gap: 0rem;
+    }
 
     span {
       margin-right: 1.25rem; // 20px
@@ -25,14 +37,20 @@
         margin-right: 0.5rem; // 8px
         color: #007bff; // Set the color to blue
       }
+      @media (max-width: 860px) {
+        margin-right: 1rem;
+      }
     }
   }
 
-  .socialMedia {
+   .socialMedia {
     display: flex;
     flex-direction: row;
     gap: 1.5rem;
-    margin-top: -1.5rem;
+    @media (max-width: 860px) {
+      gap: 1rem;
+    }
+    //margin-top: -1.5rem;
    // align-items: center;
     div:first-child{
       width:6.5%;
@@ -50,5 +68,96 @@
         color: #0056b3; // Darker blue on hover
       }
     }
+  }
+}
+
+
+.showSocialMenu2, .showSocialMenu1, .hambug{
+  display: flex;
+  justify-content: space-between;
+  width:100%;
+}
+.humburger_close{
+  display:none;
+}
+.hamburger2{
+  display:block;
+  color:white;
+  font-size: 2.5rem;
+}
+
+@media (max-width: 768px) {
+  .topBar {
+  .contactInfo {
+    display: none;
+  }
+  .hamburger {
+    display: block;
+ 
+    
+  }
+
+  .socialMedia {
+   display: none;
+  }
+   .showSocialMenu1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap:0.5rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    span{
+      color: #007bff; 
+      font-size: medium;
+     // border-bottom: 1px solid white;
+      width:100%;
+    }
+   }
+
+   .showSocialMenu2{
+    background-color: #dfe4e9;
+    padding: 1rem;
+    margin-top: 1rem;
+    a{
+      color: #007bff;     
+    }
+   }
+   .showSocialMenu{
+    padding-left: -1.5rem;
+    padding-right: -1.5rem;
+    box-shadow: #007bff;
+   }
+  /*.showSocialMenu {
+  display: flex;
+  padding:0.5rem;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  height:100vh;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(19, 57, 207, 0.9); 
+  z-index: 10; 
+
+  div {
+    margin-bottom: 1.5rem; 
+    text-align: center; 
+  }
+
+  a {
+    color: #fff;
+    font-size: 1.2rem; 
+    transition: color 0.3s ease;
+  }
+
+  &:hover {
+    color: #007bff;
+  }
+}*/
   }
 }
