--- a/components/styles/TopBar.module.scss
+++ b/components/styles/TopBar.module.scss
@@ -100,21 +100,23 @@
   .socialMedia {
    display: none;
   }
-   .showSocialMenu1{
+  .showSocialMenu1 {
     display: flex;
     flex-direction: column;
-    width:100%;
-    gap:0.5rem;
+    align-items: center;  /* Center horizontally */
+    justify-content: center;  /* Center vertically */
+    width: 100%;
+    gap: 0.5rem;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
-   margin-left:6%;
-    span{
-      color: #007bff; 
-      font-size:large;
-     // border-bottom: 1px solid white;
-      width:100%;
+
+    span {
+      color: #007bff;
+      font-size: large;
+      width: 100%;
+      text-align: center;  /* Ensure the text is centered */
     }
-   }
+  }
 
    .showSocialMenu2{
     display: flex;
