--- a/src/app/Herosection/HeroSection.module.scss
+++ b/src/app/Herosection/HeroSection.module.scss
@@ -45,7 +45,7 @@
     max-width: 600px;
     transition: opacity 0.5s ease-in-out;
     width: 50%;
-    margin-left: 5%;
+    margin-left: 7.125rem;
 
     h1, h2, p {
       transition: opacity 0.5s ease-in-out;
