--- a/components/styles/Navbar.module.scss
+++ b/components/styles/Navbar.module.scss
@@ -195,9 +195,9 @@
 
 .trustItems{
   display: flex;
-  flex-direction: row;
+  flex-direction:row-reverse;
   align-items: center;
-  margin-right:-3rem;
+ // margin-right:-3rem;
   @media (max-width: 650px) {
     margin-right:0rem;
    }
