--- a/components/styles/Footer.module.scss
+++ b/components/styles/Footer.module.scss
@@ -7,7 +7,10 @@
   box-shadow: 0 -4px 6px -2px rgba(0, 51, 102, 0.1);
   font-family: $font-family-base;
   @media (max-width: 1200px) {
-    padding: 1.5rem; 
+    padding: 2rem 4rem; 
+  }
+  @media (max-width: 900px) {
+    padding: 1rem 1.5rem;
   }
 
   .footerContent {
