--- a/components/styles/TopBar.module.scss
+++ b/components/styles/TopBar.module.scss
@@ -2,9 +2,6 @@
 @import '../../src/styles/colors.scss';
 .topBar {
   font-family: $font-family-base;
-  //display: flex;
-  //justify-content: space-between;
-  //align-items: center;
   background-color: #f8f9fa;
   padding: 1rem 7.125rem; 
   @media (max-width: 1200px) {
@@ -27,7 +24,12 @@
     @media (max-width: 860px) {
       gap: 0rem;
     }
-
+    div{
+      display:flex;
+      flex-direction: row;
+      align-items: center;
+      height:1rem;
+    }
     span {
       margin-right: 1.25rem; // 20px
       font-size: 0.9rem; // 14px
@@ -35,14 +37,6 @@
       display: flex;
       align-items: center;
 
-      svg {
-        width: 1rem !important;
-        margin-right: 0.5rem; // 8px
-        color: #007bff; // Set the color to blue
-        &:hover{
-          color: #0056b3;
-        }
-      }
       &:hover{
         color: #0056b3;
       }
@@ -50,31 +44,52 @@
         margin-right: 1rem;
       }
     }
+    
+    svg {
+      width: 1rem; 
+    height: 1rem; 
+      margin-right: 0.5rem; // 8px
+      color: #007bff; // Set the color to blue
+      &:hover{
+        color: #0056b3;
+      }
+    }
   }
 
-   .socialMedia {
+  .socialMedia {
     display: flex;
     flex-direction: row;
     gap: 1.5rem;
+    align-items: center;
+  
     @media (max-width: 860px) {
       gap: 1rem;
     }
-    //margin-top: -1.5rem;
-   // align-items: center;
-    div:first-child{
-      width:6.5%;
-    }
-    a {
-      margin-left: 0.9375rem; // 15px
-      color: #007bff; // Set the color to blue
-      //font-size: 0.2rem; // 16px
-
-      svg {
-        transition: color 0.3s ease;
+  
+    div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: auto; // Allow divs to size automatically to their content
+  
+      &:first-child {
+        width: auto; // No need for a specific width
       }
-
-      &:hover {
-        color: #0056b3; // Darker blue on hover
+  
+      a {
+        color: #007bff; // Set the color to blue
+        font-size: 1rem; // Ensure consistent icon size
+  
+        svg {
+          width: 1rem; // Set the width explicitly for the SVG icons
+          height: 1rem; // Set the height explicitly for the SVG icons
+          transition: color 0.3s ease;
+          color: #007bff;
+        }
+  
+        &:hover {
+          color: #0056b3; // Darker blue on hover
+        }
       }
     }
   }
@@ -119,7 +134,9 @@
     height: auto; /* Automatically adjust height to fit content */
     opacity: 1;
     transition: height 3s ease, opacity 0.8s ease;
-
+     svg{
+      color: #007bff;
+     }
     span {
       color: #007bff;
       font-size: large;
@@ -150,7 +167,7 @@
         &:hover{
           background-color: #0056b3;
           border-radius: 50%;
-          padding: 0.5srem;
+          padding: 0.5rem;
           color:white
         }
     }
