--- a/src/app/Herosection/HeroSection.module.scss
+++ b/src/app/Herosection/HeroSection.module.scss
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  height: 80vh;
+  height: 40rem;
   color: white;
   padding: 0;
   background-size: cover;
@@ -11,10 +11,10 @@
   background-repeat: no-repeat;
   transition: background-image 0.5s ease-in-out;
   @media (max-width: 1024px) {
-    height:70vh;
+    height:30rem;
   }
   @media (max-width: 900px) {
-    height:60vh;
+    height:30rem;
   }
   
 
@@ -33,6 +33,9 @@
 
   &.rightText {
     justify-content: flex-end;
+    @media (max-width: 600px) {
+      justify-content: center;
+    }
     .content{
       text-align: right;
       margin-right: 7.125rem;
@@ -88,19 +91,20 @@
   .content {
     z-index: 2;
     text-align: left;
-    //max-width: 600px;
     transition: opacity 0.5s ease-in-out;
-    //width: 50%;
    margin-left: 7.125rem;
-   //margin-right: -4rem;
     @media (max-width: 1200px) {
       margin-left: 4rem;
-     // margin-right: -4rem;
     }
     h1, h2, p {
       transition: opacity 0.5s ease-in-out;
     }
-
+    
+  h3{
+    @media (max-width: 1024px) {
+     display: none;
+    }
+  }
     h1, h3 {
       font-size: 4rem;
       line-height: 4rem;
@@ -121,10 +125,13 @@
       }
 
     }
+    h3{
+      color: #dddfe8 !important;
+    }
     h2 {
       width:70%;
       font-size: 1.8rem;
-      line-height:1.8rem;
+      line-height:2.5rem;
       margin-bottom: 0.5rem;
       color: #dddfe8;
       font-weight: 500;
@@ -229,12 +236,16 @@
       position: absolute;
       background-color: rgba(3, 112, 255, 1);
       padding: 20px;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      height:60%;
       border-radius: 15px;
       text-align: center !important;
-      width: 90%;
+      width: 95% !important;
      // margin-top: 10rem !important;
-      margin: 0 auto !important;
-      top:70%;
+      margin: 0!important;
+      top:75%;
 
       h1, h2, p, h3 {
         text-align: center !important;
